--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link data-trunk rel="css" href="stylance.css" />
     <link data-trunk rel="copy-dir" href="public" />
     <link data-trunk rel="rust" data-wasm-opt="z" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body></body>
 </html>
