--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Tauri + Leptos App</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=delete,ios_share,settings_backup_restore">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=delete,ios_share,settings_backup_restore">
     <link data-trunk rel="css" href="styles.css" />
     <link data-trunk rel="css" href="stylance.css" />
     <link data-trunk rel="copy-dir" href="public" />
